--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -126,7 +126,20 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_marginEnd">26dp</item>
+        <item name="android:paddingStart">16dp</item>
         <item name="android:gravity">center</item>
+        <item name="android:editable">false</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:background">@color/gray</item>
     </style>
+    <style name="oder_item_edit_text_style_editable">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginEnd">26dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+
 </resources>
