--- a/app/src/main/res/layout/fragment_current_order.xml
+++ b/app/src/main/res/layout/fragment_current_order.xml
@@ -97,7 +97,7 @@
                         style="@style/oder_item_frame_style">
 
                         <Spinner
-                            android:id="@+id/product"
+                            android:id="@+id/single_order_product_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
