--- a/app/src/main/res/layout/layout_product_item_add.xml
+++ b/app/src/main/res/layout/layout_product_item_add.xml
@@ -6,15 +6,18 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="0dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <TextView
+            android:layout_gravity="center"
+            android:gravity="center"
             android:id="@+id/items_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:padding="@dimen/_8sdp"
             android:text="5"
             android:textColor="@color/colorPrimaryDark"
@@ -22,6 +25,7 @@
 
 
         <TextView
+            android:layout_gravity="center"
             android:id="@+id/product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,7 +39,8 @@
 
         <ImageView
             android:id="@+id/delete"
-
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_alignParentEnd="true"
