--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -142,10 +142,10 @@
     </style>
 
     <style name="fab_buttons_CardView_Style">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/spacing_middle</item>
-        <item name="android:layout_gravity">center_vertical|end|right</item>
     </style>
 
     <style name="fab_buttons_TextView_Style">
