--- a/app/src/main/res/layout/fragment_current_order.xml
+++ b/app/src/main/res/layout/fragment_current_order.xml
@@ -85,6 +85,7 @@
                             android:id="@+id/client_name"
                             style="@style/oder_item_edit_text_style_editable" />
 
+
                     </FrameLayout>
 
 
@@ -520,313 +521,117 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/_16sdp"
         android:gravity="start"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <android.support.v7.widget.CardView
+            android:id="@+id/normal_order_data_confirmed"
+            style="@style/fab_buttons_CardView_Style"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="2dp"
+            app:contentPadding="@dimen/spacing_medium">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/confirm_data"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
+            <TextView
+                style="@style/fab_buttons_TextView_Style"
+                android:text="Confirm Order Data" />
 
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="Confirm Order Data" />
+        </android.support.v7.widget.CardView>
 
-            </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:id="@+id/normal_client_phone_error"
+            style="@style/fab_buttons_CardView_Style"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="2dp"
+            app:contentPadding="@dimen/spacing_medium">
 
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
+            <TextView
+                style="@style/fab_buttons_TextView_Style"
+                android:text="@string/client_phone_error" />
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/client_cancel"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
+        <android.support.v7.widget.CardView
+            android:id="@+id/normal_no_answer"
+            style="@style/fab_buttons_CardView_Style"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="2dp"
+            app:contentPadding="@dimen/spacing_medium">
 
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="Cancel Order" />
+            <TextView
+                style="@style/fab_buttons_TextView_Style"
+                android:text="@string/client_noanswer" />
 
-            </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/normal_delay"
+            style="@style/fab_buttons_CardView_Style"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="2dp"
+            app:contentPadding="@dimen/spacing_medium">
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            <TextView
+                style="@style/fab_buttons_TextView_Style"
+                android:text="@string/delay_order" />
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/order_shipper_confirmed2"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
+        </android.support.v7.widget.CardView>
 
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/confirm_shipper_status" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/normal_client_cancel"
+            style="@style/fab_buttons_CardView_Style"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="2dp"
+            app:contentPadding="@dimen/spacing_medium">
 
-            </android.support.v7.widget.CardView>
+            <TextView
+                style="@style/fab_buttons_TextView_Style"
+                android:text="Cancel Order" />
 
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
+        </android.support.v7.widget.CardView>
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <android.support.v7.widget.CardView
+            android:id="@+id/normal_busy"
+            style="@style/fab_buttons_CardView_Style"
+            app:cardBackgroundColor="@color/colorPrimary"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="2dp"
+            app:contentPadding="@dimen/spacing_medium">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/deliver"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
+            <TextView
+                style="@style/fab_buttons_TextView_Style"
+                android:text="@string/client_busy" />
 
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/deliver" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/cancel_order"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/cancel_order" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/return_order"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/return_order" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/client_phone_error"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/client_phone_error" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/no_answer"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/client_noanswer" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/shipping_no_answer"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/client_noanswer" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/busy"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/client_busy" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/delay"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/delay_order" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/problem"
-                style="@style/fab_buttons_CardView_Style"
-                app:cardBackgroundColor="@color/colorPrimary"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="2dp"
-                app:contentPadding="@dimen/spacing_medium">
-
-                <TextView
-                    style="@style/fab_buttons_TextView_Style"
-                    android:text="@string/problem_in_order" />
-
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:layout_width="@dimen/spacing_xmedium"
-                android:layout_height="0dp" />
-
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabShowUpdateOrderButtons"
+            android:id="@+id/normalUpdateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacing_smlarge"
-            android:layout_marginTop="@dimen/spacing_middle"
-            android:layout_marginRight="@dimen/spacing_smlarge"
-            android:layout_marginBottom="@dimen/spacing_middle"
+            android:layout_margin="@dimen/_16sdp"
             android:clickable="true"
             android:tint="@android:color/white"
             app:backgroundTint="@color/colorPrimary"
             app:fabSize="normal"
             app:rippleColor="@android:color/white"
             app:srcCompat="@drawable/fab_add" />
-
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/save_edit"
+        android:layout_margin="@dimen/_16sdp"
+        android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:tint="@color/green"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabSize="normal"
+        app:rippleColor="@android:color/white"
+        app:srcCompat="@drawable/ic_save_edite" />
 </RelativeLayout>
