--- a/app/src/main/res/layout/fragment_search_order_phone.xml
+++ b/app/src/main/res/layout/fragment_search_order_phone.xml
@@ -657,7 +657,7 @@
         xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:id="@+id/right_menu"
         android:padding="@dimen/_16sdp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_above="@id/navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
