--- a/app/src/main/res/layout/layout_product_spinner_item.xml
+++ b/app/src/main/res/layout/layout_product_spinner_item.xml
@@ -23,4 +23,15 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <TextView
+        android:textColor="@color/black_text_color"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:text="16LE"
+        android:id="@+id/price"
+        android:layout_marginEnd="@dimen/_16sdp"
+        android:layout_gravity="center"
+        android:gravity="end"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
