Chant to test_apis

--- a/app/src/main/res/layout/temp.xml
+++ b/app/src/main/res/layout/temp.xml
@@ -28,7 +28,7 @@
 
                 <TextView
                     style="@style/fab_buttons_TextView_Style"
-                    android:text="Confirm Order Data" />
+                    android:text="@string/order_data_confirmed" />
 
             </androidx.cardview.widget.CardView>
 
