--- a/app/src/main/res/menu/recrding_menu_main.xml
+++ b/app/src/main/res/menu/recrding_menu_main.xml
@@ -10,6 +10,7 @@
         app:actionViewClass="com.github.axet.androidlibrary.widgets.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
     <item
+        android:visible="false"
         android:id="@+id/action_settings"
         android:orderInCategory="200"
         android:title="@string/action_settings"
@@ -53,6 +54,7 @@
         android:title="@string/call_recording"
         app:showAsAction="never" />
     <item
+        android:visible="false"
         android:id="@+id/action_about"
         android:orderInCategory="600"
         android:title="@string/menu_about"
