--- a/app/src/main/res/layout/bubble.xml
+++ b/app/src/main/res/layout/bubble.xml
@@ -23,7 +23,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/register_user"
-            android:src="@drawable/button_background"
+            android:background="@drawable/button_background"
+            android:src="@drawable/ic_add_shopping_cart_black_24dp"
+            android:scaleType="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -31,7 +33,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/send_broadcast"
-            android:src="@drawable/button_background"
+            android:background="@drawable/button_background"
+            android:src="@drawable/broadcast_black_24dp"
+            android:scaleType="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/register_user"
             android:layout_marginEnd="5sp"
@@ -65,7 +69,7 @@
             android:id="@+id/gotUserId"
             app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/circle_gray"
-            app:layout_constraintEnd_toStartOf="@id/gotUserName"
+            app:layout_constraintEnd_toStartOf="@+id/gotUserName"
             app:layout_constraintStart_toStartOf="@id/bubble_logo"
             app:layout_constraintHorizontal_bias="0"
             />
